# xlLib

./: .gitignore  BUILD.gn  SRCDEP.yaml
Document/: xlLib.natvis
Include/: BUILD.gn  DebugNew.h  Encoding.h
Include/xl/: xlDef.h
Include/xl/AppHelper/: xlLog.h
Include/xl/Common/Algorithm/: xlSort.h
Include/xl/Common/Containers/: xlGraph.h  xlIterator.h  xlMap.h  xlRBTree.h
Include/xl/Common/Cryption/: xlMD5.h  xlSHA1.h
Include/xl/Common/Math/: xlBigInt.h  xlBitValue.h  xlIntervalSet.h  xlMathBase.h
Include/xl/Common/Memory/: xlMemory.h
Include/xl/Common/Meta/: xlBind.h  xlFunction.h  xlMacros.h  xlMetaBase.h  xlStaticAssert.h  xlTuple.h  xlTypeList.h
Include/xl/Common/Parser/: xlRegExp.h  xlRegExp.h.dump
Include/xl/Common/String/: xlString.h
Independent/DebugNew/trunk/: DebugNew.h  DebugNew.sln  DebugNew.vcproj  Main.cpp
Independent/Encoding/trunk/: Encoding.cpp  Encoding.sln  Encoding.vcproj  Main.cpp
Independent/xlArray/trunk/: Main.cpp  xlArray.h  xlArray.sln  xlArray.vcproj
Independent/xlQIPrt/tags/tag_release_1.0.0.1/: xlQIPtr.vcproj
Independent/xlQIPrt/trunk/: Main.cpp
Independent/xlQIPtr/tags/tag_release_1.0.0.1/: xlQIPtr.h
Independent/xlQIPtr/trunk/: xlQIPtr.h  xlQIPtr.sln
Lib/: Encoding.lib
Projects/PerformanceTest/: BUILD.gn
Projects/PerformanceTest/xlArrayTest/: BUILD.gn  xlArrayTest.vcxproj
Projects/PerformanceTest/xlBigIntTest/: BUILD.gn  xlBigIntTest.vcxproj
Projects/PerformanceTest/xlListTest/: BUILD.gn  xlListTest.vcxproj
Projects/PerformanceTest/xlMapTest/: BUILD.gn  xlMapTest.vcxproj
Projects/PerformanceTest/xlMemoryTest/: BUILD.gn  xlMemoryTest.vcxproj
Projects/PerformanceTest/xlRegExpTest/: BUILD.gn  Main.cpp  xlRegExpTest.vcxproj
Projects/PerformanceTest/xlSetTest/: BUILD.gn  xlSetTest.vcxproj
Projects/Test/: Test.vcxproj
Projects/UnitTest/: BUILD.gn  UnitTest.vcxproj
Projects/UnitTest/Common/Cryption/: xlMD5Test.cpp  xlSHA1Test.cpp
Projects/UnitTest/Common/Meta/: xlBindTest.cpp  xlFunctionTest.cpp  xlScopedExitTest.cpp
Projects/UnitTest/Common/Objects/: xlBigIntTest.cpp
Projects/UnitTest/Common/Parser/: xlRegExpTest.cpp
Projects/UnitTest/Common/String/: xlBase64Test.cpp  xlStringTest.cpp
Projects/Win32GUITest/: BUILD.gn  Win32GUITest.vcxproj
Projects/Win32MessagingTest/: BUILD.gn  Win32MessagingTest.vcxproj
Projects/Win32NetworkTest/: BUILD.gn  Win32NetworkTest.vcxproj
build_config/: BUILD.gn
