source_set("xlLib") {
  sources = [
    "xl/AppHelper/xlPerfTest.h",
    "xl/AppHelper/xlUnitTest.h",
    "xl/Common/Algorithm/xlSort.h",
    "xl/Common/Containers/xlArray.h",
    "xl/Common/Containers/xlBinTree.h",
    "xl/Common/Containers/xlBinTreeNode.h",
    "xl/Common/Containers/xlGraph.h",
    "xl/Common/Containers/xlIterator.h",
    "xl/Common/Containers/xlLinkedListNode.h",
    "xl/Common/Containers/xlList.h",
    "xl/Common/Containers/xlMap.h",
    "xl/Common/Containers/xlPair.h",
    "xl/Common/Containers/xlRBTree.h",
    "xl/Common/Containers/xlSet.h",
    "xl/Common/Containers/xlTree.h",
    "xl/Common/Cryption/xlCRC32.h",
    "xl/Common/Cryption/xlMD5.h",
    "xl/Common/Cryption/xlSHA1.h",
    "xl/Common/Math/xlBigInt.h",
    "xl/Common/Math/xlBitValue.h",
    "xl/Common/Math/xlEquation.h",
    "xl/Common/Math/xlInterval.h",
    "xl/Common/Math/xlIntervalSet.h",
    "xl/Common/Math/xlMathBase.h",
    "xl/Common/Memory/xlMemory.h",
    "xl/Common/Memory/xlSmartPtr.h",
    "xl/Common/Meta/xlAssert.h",
    "xl/Common/Meta/xlBind.h",
    "xl/Common/Meta/xlCountOf.h",
    "xl/Common/Meta/xlEnableIf.h",
    "xl/Common/Meta/xlFunction.h",
    "xl/Common/Meta/xlMacros.h",
    "xl/Common/Meta/xlMetaBase.h",
    "xl/Common/Meta/xlNonCopyable.h",
    "xl/Common/Meta/xlNonInstantiable.h",
    "xl/Common/Meta/xlScopeExit.h",
    "xl/Common/Meta/xlStaticAssert.h",
    "xl/Common/Meta/xlTuple.h",
    "xl/Common/Meta/xlTypeList.h",
    "xl/Common/Meta/xlTypeTraits.h",
    "xl/Common/Parser/xlRegExp.h",
    "xl/Common/String/xlBase64.h",
    "xl/Common/String/xlEncoding.h",
    "xl/Common/String/xlString.h",
    "xl/xlDef.h",
  ]

  if (is_win) {
    sources += [
      "xl/AppHelper/xlCrashDumper.h",
      "xl/AppHelper/xlLog.h",
      "xl/Windows/COM/InterfaceHelper/xlDWebBrowserEvents2Impl.h",
      "xl/Windows/COM/InterfaceHelper/xlDWebBrowserEventsImpl.h",
      "xl/Windows/COM/InterfaceHelper/xlICanHandleExceptionImpl.h",
      "xl/Windows/COM/InterfaceHelper/xlIClassFactoryImpl.h",
      "xl/Windows/COM/InterfaceHelper/xlIDispatchExImpl.h",
      "xl/Windows/COM/InterfaceHelper/xlIDispatchImpl.h",
      "xl/Windows/COM/InterfaceHelper/xlIDocHostUIHandlerImpl.h",
      "xl/Windows/COM/InterfaceHelper/xlIObjectWithSiteImpl.h",
      "xl/Windows/COM/InterfaceHelper/xlIOleClientSiteImpl.h",
      "xl/Windows/COM/InterfaceHelper/xlIOleInPlaceFrameImpl.h",
      "xl/Windows/COM/InterfaceHelper/xlIOleInPlaceSiteExImpl.h",
      "xl/Windows/COM/InterfaceHelper/xlIOleInPlaceSiteImpl.h",
      "xl/Windows/COM/InterfaceHelper/xlIOleInPlaceSiteWindowlessImpl.h",
      "xl/Windows/COM/InterfaceHelper/xlIOleInPlaceUIWindowImpl.h",
      "xl/Windows/COM/InterfaceHelper/xlIOleObjectImpl.h",
      "xl/Windows/COM/InterfaceHelper/xlIOleWindowImpl.h",
      "xl/Windows/COM/InterfaceHelper/xlIShockwaveFlashImpl.h",
      "xl/Windows/COM/InterfaceHelper/xlITfActiveLanguageProfileNotifySinkImpl.h",
      "xl/Windows/COM/InterfaceHelper/xlITfCompositionSinkImpl.h",
      "xl/Windows/COM/InterfaceHelper/xlITfDisplayAttributeProviderImpl.h",
      "xl/Windows/COM/InterfaceHelper/xlITfFnGetPreferredTouchKeyboardLayoutImpl.h",
      "xl/Windows/COM/InterfaceHelper/xlITfFunctionImpl.h",
      "xl/Windows/COM/InterfaceHelper/xlITfFunctionProviderImpl.h",
      "xl/Windows/COM/InterfaceHelper/xlITfKeyEventSinkImpl.h",
      "xl/Windows/COM/InterfaceHelper/xlITfLangBarItemButtonImpl.h",
      "xl/Windows/COM/InterfaceHelper/xlITfLangBarItemImpl.h",
      "xl/Windows/COM/InterfaceHelper/xlITfSourceImpl.h",
      "xl/Windows/COM/InterfaceHelper/xlITfTextEditSinkImpl.h",
      "xl/Windows/COM/InterfaceHelper/xlITfTextInputProcessorExImpl.h",
      "xl/Windows/COM/InterfaceHelper/xlITfTextInputProcessorImpl.h",
      "xl/Windows/COM/InterfaceHelper/xlITfThreadFocusSinkImpl.h",
      "xl/Windows/COM/InterfaceHelper/xlITfThreadMgrEventSinkImpl.h",
      "xl/Windows/COM/InterfaceHelper/xlITypeCompImpl.h",
      "xl/Windows/COM/InterfaceHelper/xlITypeInfoImpl.h",
      "xl/Windows/COM/InterfaceHelper/xlITypeLibImpl.h",
      "xl/Windows/COM/InterfaceHelper/xlIUnknownImpl.h",
      "xl/Windows/COM/InterfaceHelper/xlIWMPCoreImpl.h",
      "xl/Windows/COM/InterfaceHelper/xlIWMPPlayerImpl.h",
      "xl/Windows/COM/Objects/xlFlashPlayer.h",
      "xl/Windows/COM/Objects/xlMediaPlayer.h",
      "xl/Windows/COM/Objects/xlOleContainer.h",
      "xl/Windows/COM/Objects/xlWebBrowser.h",
      "xl/Windows/COM/xlClassFactory.h",
      "xl/Windows/COM/xlComClass.h",
      "xl/Windows/COM/xlComDef.h",
      "xl/Windows/COM/xlComInclude.h",
      "xl/Windows/COM/xlComLoader.h",
      "xl/Windows/COM/xlComModule.h",
      "xl/Windows/COM/xlComPtr.h",
      "xl/Windows/COM/xlDispatcher.h",
      "xl/Windows/Console/xlConsole.h",
      "xl/Windows/File/xlIniFile.h",
      "xl/Windows/File/xlPath.h",
      "xl/Windows/GUI/xlCommCtrlInitializer.h",
      "xl/Windows/GUI/xlDPI.h",
      "xl/Windows/GUI/xlDialog.h",
      "xl/Windows/GUI/xlMenu.h",
      "xl/Windows/GUI/xlStdButton.h",
      "xl/Windows/GUI/xlStdComboBox.h",
      "xl/Windows/GUI/xlStdEdit.h",
      "xl/Windows/GUI/xlStdLink.h",
      "xl/Windows/GUI/xlStdListBox.h",
      "xl/Windows/GUI/xlStdListView.h",
      "xl/Windows/GUI/xlStdProgressBar.h",
      "xl/Windows/GUI/xlStdScrollBar.h",
      "xl/Windows/GUI/xlStdStatic.h",
      "xl/Windows/GUI/xlStdTrackBar.h",
      "xl/Windows/GUI/xlThunk.h",
      "xl/Windows/GUI/xlWindow.h",
      "xl/Windows/GUI/xlWindowHelper.h",
      "xl/Windows/GUI/xlWindowMessage.h",
      "xl/Windows/Memory/xlHeap.h",
      "xl/Windows/Memory/xlSafeSmartPtr.h",
      "xl/Windows/Messaging/xlMessageBus.h",
      "xl/Windows/Network/xlHttpIO.h",
      "xl/Windows/Network/xlSocket.h",
      "xl/Windows/Network/xlWinHttp.h",
      "xl/Windows/Registry/xlRegistry.h",
      "xl/Windows/Rendering/D2D/xlBitmapD2D1.h",
      "xl/Windows/Rendering/D2D/xlBitmapD2D1Point1.h",
      "xl/Windows/Rendering/GDI/xlBitmapGDI.h",
      "xl/Windows/Rendering/GDIPlus/xlBitmapGDIPlus.h",
      "xl/Windows/Rendering/GDIPlus/xlGDIPlusImports.h",
      "xl/Windows/Rendering/GDIPlus/xlGDIPlusUtility.h",
      "xl/Windows/Rendering/xlBitmap.h",
      "xl/Windows/Rendering/xlBitmapDef.h",
      "xl/Windows/Rendering/xlGraphics.h",
      "xl/Windows/Rendering/xlRenderer.h",
      "xl/Windows/Threads/xlCriticalSection.h",
      "xl/Windows/Threads/xlEvent.h",
      "xl/Windows/Threads/xlThread.h",
      "xl/Windows/Threads/xlThreadPool.h",
      "xl/Windows/Threads/xlTls.h",
      "xl/Windows/Timer/xlTimer.h",
      "xl/Windows/xlDllHelper.h",
      "xl/Windows/xlHandle.h",
      "xl/Windows/xlWin32Ver.h",
    ]
  }
}
