config("project_common") {
  if (is_win) {
    cflags_c = [ "/std:c17" ]
    cflags_cc = [ "/std:c++17" ]
  } else {
    cflags_c = [ "-std=c17" ]
    cflags_cc = [ "-std=c++17" ]
  }
  defines = []
  if (is_win) {
    defines += [
      "_WIN32_WINNT=0x0501",
      "_WIN32_WINDOWS=0x0501",
    ]
  }
  if (is_win) {
    configs = [ "../build/config/win:static_runtime" ]
  }
  if (is_win) {
  } else {
    cflags = [
      "-Wno-deprecated-declarations",
      "-Wno-return-type",
    ]
  }
}
